# StellarGift

./: .gitignore  LEVEL1_README.md  LEVEL_1_WHITE_BELT.md  LEVEL_2_YELLOW_BELT.md  LEVEL_3_ORANGE_BELT.md  LICENSE  README.md  package-lock.json  package.json  vitest.setup.ts
.github/workflows/: ci.yml  deploy.yml
__tests__/: ClaimGift.test.tsx  CreateGift.test.tsx  keypair.test.ts
app/: globals.css  layout.tsx  page.tsx
app/claim/[secret]/: page.tsx
components/: ClaimGift.tsx  CreateGift.tsx  ExpiryCountdown.tsx  GiftNFTReceipt.tsx  GiftResult.tsx  MobileGiftCard.tsx  WalletConnect.tsx
contract/: Cargo.toml
contract-nft/: Cargo.toml
contract-nft/src/: lib.rs
contract/src/: lib.rs  test.rs
lib/: keypair.ts  stellar.ts  wallet.ts
