[package]
name = "stellar-gift-nft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]




[dependencies]
soroban-sdk = "25.0.1"

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
codegen-units = 1

[profile.test]
codegen-units = 1

